[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'ton_types'
version = '2.0.7'

[dependencies]
aes-ctr = '0.6'
base64 = '0.13'
crc = '3.0'
curve25519-dalek = '3.2'
ed25519 = '1.0'
ed25519-dalek = '1.0'
failure = '0.1.6'
hex = '0.4'
lazy_static = '1.4'
log = '0.4'
num = '0.4'
num-derive = '0.3'
num-traits = '0.2'
rand = '0.7'
serde_json = '1.0'
sha2 = '0.10'
x25519-dalek = '1.2'
lockfree = { git = 'https://github.com/tonlabs/lockfree.git' }
serde = { features = [ 'derive', 'rc' ], version = '1.0.105' }
smallvec = { features = [ 'const_new', 'union', 'write' ], version = '1.10' }

[features]
export_key = [  ]

