[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'ton_types'
version = '2.0.33'

[dependencies]
aes-ctr = '0.6'
base64 = '0.13'
blst = { features = [ 'portable' ], version = '0.3.5' }
crc = '3.0'
curve25519-dalek = '4.0'
ed25519 = '2.2'
ed25519-dalek = { features = [ 'hazmat', 'rand_core' ], version = '2.0' }
failure = '0.1.6'
hex = '0.4'
lazy_static = '1.4'
log = '0.4'
num = '0.4'
num-derive = '0.3'
num-traits = '0.2'
rand = '0.8'
serde = { features = [ 'derive', 'rc' ], version = '1.0.105' }
serde_json = '1.0'
sha2 = '0.10'
smallvec = { features = [ 'const_new', 'union', 'write' ], version = '1.10' }
x25519-dalek = '2.0'
lockfree = { git = 'https://github.com/tonlabs/lockfree.git' }

[dev-dependencies]
criterion = '0.4'
pretty_assertions = '1.3'
pprof = { features = [ 'criterion', 'flamegraph' ], version = '0.11' }

[features]
export_key = [  ]

[[bench]]
harness = false
name = 'benchmarks'

[lib]
bench = false

